Starting to look into how get inventory's to work

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,3 +7,6 @@ commands:
   giveitem:
     usage: /<command>
     description: Tutorial Command
+  inventory:
+    usage: /inventory
+    description: Opens inventory
